--- a/mylibrary/src/main/res/values/strings.xml
+++ b/mylibrary/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">趣智校园</string>
+    <string name="app_name">蓝牙设备</string>
     <string name="binding">绑定手机号</string>
     <string name="back">返回</string>
     <string name="hint_login">请输入手机号码</string>
